test/corpus/bigquery_script.txt
================================================================================
SET
================================================================================

SET search_path TO information_schema;
SET search_path TO 'test';
SET LOCAL search_path TO 'test';
SET SESSION search_path TO 'test';
SET SESSION search_path = 'test';

--------------------------------------------------------------------------------

(source_file
  (set_statement
    (identifier)
    (identifier))
  (set_statement
    (identifier)
    (string))
  (set_statement
    (identifier)
    (string))
  (set_statement
    (identifier)
    (string))
  (set_statement
    (identifier)
    (string)))
