test/corpus/identifier.txt
=======================================================
IDENTIFIER: basic names
=======================================================

select 
  _5bc.dataField, 
 `5abc`.dataField,
 `GROUP`.dataField,
 abc5.GROUP

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (identifier)
    (identifier)
    (identifier)
    (identifier)
    ))))


=======================================================
IDENTIFIER: String literals
=======================================================

select 
 "",
 "double quote", 
 "double quote", 
 'single "quote"',
 '''triple quoted ''',
 """triple quoted """

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (string)
    (string)
    (string)
    (string)
    (string)
    (string)
    ))))


=======================================================
IDENTIFIER: NUMERIC literals
=======================================================

select 
  NUMERIC '0',
  NUMERIC '123456',
  NUMERIC '-3.14',
  NUMERIC '-0.54321',
  NUMERIC '1.23456e05',
  NUMERIC '-9.876e-3',
  BIGNUMERIC '0',
  BIGNUMERIC '123456',
  BIGNUMERIC '-3.14',
  BIGNUMERIC '-0.54321',
  BIGNUMERIC '1.23456e05',
  BIGNUMERIC '-9.876e-3'

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    (number (numeric))
    ))))


=======================================================
IDENTIFIER: Floating point
=======================================================

select 
  123.456e-67,
  .1E4,
  58.,
  4e2

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (number)
    (number)
    (number)
    (number)
    ))))


=======================================================
IDENTIFIER: Array literals
=======================================================

select
  [1, 2, 3],
  ['x', 'y', 'xy'],
  ARRAY[1, 2, 3],
  ARRAY<string>['x', 'y', 'xy'],
  ARRAY<int64>[],
  ARRAY<struct<x INT64, y STRING>>[],
  []

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (array (number) (number) (number))
    (array (string) (string) (string))
    (array (number) (number) (number))
    (array (string) (string) (string))
    (array)
    (array)
    (array)
    ))))

=======================================================
IDENTIFIER: Struct literals
=======================================================

select
  (1, 2, 3),
  (1, 'abc'),
  STRUCT(1 AS foo, 'abc' AS bar),
  STRUCT<INT32, INT64>(1, 2),
  STRUCT(1),
  STRUCT<INT64>(1),
  STRUCT<x string>(1),
  STRUCT<x struct<INT64>>(1)

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (struct (number) (number) (number))
    (struct (number) (string))
    (struct (alias (number) (identifier)) (alias (string) (identifier)))
    (struct (number) (number))
    (struct (number))
    (struct (number))
    (struct (number))
    (struct (number))
    ))))
 

=======================================================
IDENTIFIER: DATE/TIME/DATETIME/TIMESTAMP/INTERVAL literals
=======================================================

select
  DATE '2014-09-27',
  TIME '12:30:00.45',
  DATETIME '2014-09-27 12:30:00.45',
  TIMESTAMP '2014-09-27 12:30:00.45-08'

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (time (string))
    (time (string))
    (time (string))
    (time (string))
    ))))
 

=======================================================
IDENTIFIER: Query parameter
=======================================================

select 
  @user_used,
  @@system_used

--------------------------------------------------------------------------------

(source_file
 (select_statement
  (select_clause
   (select_clause_body
    (named_query_parameter)
    (named_query_parameter)
    ))))
 
